examples/test/testpolicy19923.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19923
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key15: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value32
          key21: value32
      podSelector:
        matchLabels:
          key22: value4
          key32: value8
